dhall/tests/import/failure/unit/MissingFile.txt
Type error: error: error
 --> <current file>:1:1
  |
1 | ./doesnt-exist.dhall
  | ^^^^^^^^^^^^^^^^^^^^ No such file or directory (os error 2)
  |
